--- a/src/pages/AuthPage/MyPage.css
+++ b/src/pages/AuthPage/MyPage.css
@@ -40,10 +40,12 @@
 .mypage_profile{
     width: 320px;
     height: 320px;
-    background-color: #6D8FE4;
+    background-image: url("/src/image/default_profile.png");
+    background-size: 320px 320px;
     margin-top: 90px;
     margin-left: 30px;
     float: left;
+    border-radius: 20px;
 }
 
 .mypage_name_box{
