--- a/src/pages/MainPage/MiniDashboard.css
+++ b/src/pages/MainPage/MiniDashboard.css
@@ -10,7 +10,6 @@
     margin-left: 30px;
     margin-top: 50px;
     border-radius: 16px;
-    padding-left: 40px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     display: flex;
     flex-direction: column;
@@ -18,9 +17,11 @@
 }
 
 .minidashboard_address_list{
+    margin-left: 40px;
+    margin-right: 20px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: start;
 }
 
 .minidashboard_box:hover{
@@ -30,10 +31,12 @@
 .minidashboard_address{
     padding-top: 20px;
     font-size: 25px;
+    text-align: left;
     color: #333333;
 }
 
 .minidashboard_title{
+    margin-left: 40px;
     padding-top: 20px;
     font-size: 30px;
     color: #333333;
