--- a/src/pages/ManagePage/PatientForm.css
+++ b/src/pages/ManagePage/PatientForm.css
@@ -40,7 +40,8 @@
 .patientform_profile{
     width: 320px;
     height: 320px;
-    background-color: #6D8FE4;
+    background-image: url("/src/image/default_profile.png");
+    background-size: 320px 320px;
     margin-top: 90px;
     margin-left: 30px;
     float: left;
