--- a/src/pages/AuthPage/MyPage.css
+++ b/src/pages/AuthPage/MyPage.css
@@ -45,7 +45,6 @@
     margin-top: 90px;
     margin-left: 30px;
     float: left;
-    border-radius: 20px;
 }
 
 .mypage_name_box{
@@ -188,27 +187,35 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-}
-
-.mypage_modal_popup h3 {
-    margin-bottom: 10px;
-    text-align: center;
+    border-radius: 30px;
+    width: 600px;
+    height: 250px;
 }
 
 .mypage_modal_popup p {
-    margin-bottom: 20px;
+    margin-top: 75px;
+    text-align: center;
+    width: 500px;
+    height: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 35px;
+    color: #333333;
 }
 
 .mypage_modal_buttons {
     display: flex;
     justify-content: center;
+    margin-top: 35px;
 }
 
 .mypage_modal_delete_btn button {
-    margin: 0 10px;
-    padding: 10px 20px;
+    margin-right: 15px;
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 25px;
     background-color: white;
     border: 3px solid #6D8FE4;
     border-radius: 16px;
@@ -218,16 +225,17 @@
 }
 
 .mypage_modal_cancel_btn button{
-
-    margin: 0 10px;
-    padding: 10px 20px;
+    margin-left: 15px;
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 25px;
     background-color: white;
     border: 3px solid #ababab;
     border-radius: 16px;
     color: #ababab;
     cursor: pointer;
     transition: box-shadow 0.2s;
-
 }
 
 .mypage_modal_buttons button:hover {
