--- a/src/pages/ManagePage/PatientForm.css
+++ b/src/pages/ManagePage/PatientForm.css
@@ -208,27 +208,35 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-}
-
-.patientform_modal_popup h3 {
-    margin-bottom: 10px;
-    text-align: center;
+    border-radius: 30px;
+    width: 600px;
+    height: 250px;
 }
 
 .patientform_modal_popup p {
-    margin-bottom: 20px;
+    margin-top: 60px;
+    text-align: center;
+    width: 300px;
+    height: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 35px;
+    color: #333333;
 }
 
 .patientform_modal_buttons {
     display: flex;
     justify-content: center;
+    margin-top: 15px;
 }
 
 .patientform_modal_delete_btn button {
-    margin: 0 10px;
-    padding: 10px 20px;
+    margin-right: 15px;
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 25px;
     background-color: white;
     border: 3px solid #6D8FE4;
     border-radius: 16px;
@@ -238,16 +246,17 @@
 }
 
 .patientform_modal_cancel_btn button {
-
-    margin: 0 10px;
-    padding: 10px 20px;
+    margin-left: 15px;
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 25px;
     background-color: white;
     border: 3px solid #ababab;
     border-radius: 16px;
     color: #ababab;
     cursor: pointer;
     transition: box-shadow 0.2s;
-
 }
 
 .modal_buttons button:hover {
