--- a/src/pages/ManagePage/PatientInfoForm.css
+++ b/src/pages/ManagePage/PatientInfoForm.css
@@ -42,7 +42,6 @@
     height: 320px;
     background-image: url("/src/image/default_profile.png");
     background-size: 320px 320px;
-    border-radius: 20px;
     margin-top: 90px;
     margin-left: 30px;
     float: left;
@@ -188,27 +187,35 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-}
-
-.patient_infoform_modal_popup h3 {
-    margin-bottom: 10px;
-    text-align: center;
+    border-radius: 30px;
+    width: 600px;
+    height: 250px;
 }
 
 .patient_infoform_modal_popup p {
-    margin-bottom: 20px;
+    margin-top: 60px;
+    text-align: center;
+    width: 300px;
+    height: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 35px;
+    color: #333333;
 }
 
 .patient_infoform_modal_buttons {
     display: flex;
     justify-content: center;
+    margin-top: 15px;
 }
 
 .patient_infoform_modal_delete_btn button {
-    margin: 0 10px;
-    padding: 10px 20px;
+    margin-right: 15px;
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 25px;
     background-color: white;
     border: 3px solid #6D8FE4;
     border-radius: 16px;
@@ -218,16 +225,17 @@
 }
 
 .patient_infoform_modal_cancel_btn button {
-
-    margin: 0 10px;
-    padding: 10px 20px;
+    margin-left: 15px;
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 25px;
     background-color: white;
     border: 3px solid #ababab;
     border-radius: 16px;
     color: #ababab;
     cursor: pointer;
     transition: box-shadow 0.2s;
-
 }
 
 .modal_infoform_buttons button:hover {
