--- a/src/pages/ManagePage/PatientForm.css
+++ b/src/pages/ManagePage/PatientForm.css
@@ -175,7 +175,7 @@
 .patientform_add_patient_button button{
     width: 60px;
     height: 60px;
-    background-image: url('./free-icon-add.png');
+    background-image: url('/src/image/free-icon-add-friend-4397494.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
