--- a/src/pages/AuthPage/Login.css
+++ b/src/pages/AuthPage/Login.css
@@ -5,52 +5,45 @@
 }
 
 .login_page{
-    height: 120vh;
+    height: 1080px;
+    width: 1920px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
 }
 
 .login_hello_box{
-    width: 900px;
+    width: 800px;
     height: 1080px;
     background-color: #002455;
     border-radius: 100px;
-    margin: 100px 0;
 }
 
 .login_hello_text_1{
     color: white;
-    font-size: 80px;
-    margin-left: 100px;
-    margin-top: 250px;
+    font-size: 60px;
     text-align: left;
-    width: 700px;
-    height: 100px;
+    width: 550px;
+    height: 80px;
 }
 
 .login_hello_text_2{
-    width: 700px;
-    height: 100px;
+    width: 550px;
+    height: 80px;
     color: white;
-    font-size: 40px;
-    margin-left: 100px;
+    font-size: 30px;
     text-align: left;
 }
 
 .login_hello_text_3{
-    width: 700px;
+    width: 550px;
     height: 50px;
     color: white;
-    font-size: 40px;
-    margin-top: 225px;
-    margin-left: 100px;
+    font-size: 30px;
     text-align: left;
 }
 
 .login_hello_text_4{
-    margin-left: 100px;
-    width: 700px;
+    width: 550px;
     height: 50px;
     text-align: left;
 }
@@ -60,10 +53,28 @@
     font-size: 22px;
 }
 
+.login_hello_text{
+    width: 550px;
+    height: 560px;
+    margin-top: 250px;
+    margin-left: 100px;
+}
+
+.login_first_hello_box{
+    width: 550px;
+    height: 160px;
+}
+
+.login_second_hello_box{
+    width: 550px;
+    height: 100px;
+    margin-top: 300px;
+}
+
 .login_box{
-    width:600px;
-    height:900px;
-    margin: 100px 200px;
+    width:500px;
+    height:700px;
+    margin: 190px 310px;
     background-color: #ffffff;
     border-radius: 16px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -72,78 +83,79 @@
 .login_title {
     text-align: left;
     font-size: 40px;
-    margin-top: 40px;
-    margin-left: 90px;
-    width: 420px;
-    height: 80px;
+    margin-top: 80px;
+    margin-left: 75px;
+    width: 350px;
+    height: 50px;
     color: #002455;
     font-weight: 600;
 }
 
 .login_input_box{
-    width: 420px;
-    height: 300px;
-    margin-top: 60px;
-    margin-left: 90px;
+    width: 350px;
+    height: 230px;
+    margin-top: 50px;
+    margin-left: 75px;
 }
 
 .login_id_text{
-    width: 420px;
+    width: 350px;
     height: 50px;
-    font-size: 30px;
+    font-size: 22px;
     text-align: left;
     color: #002455;
+    line-height: 50px;
 }
 
 .login_password_text{
-    width: 420px;
+    width: 350px;
     height: 50px;
-    font-size: 30px;
+    font-size: 22px;
     text-align: left;
     color: #002455;
+    line-height: 50px;
 }
 
 .login_id{
-    width: 420px;
-    height: 140px;
+    width: 350px;
+    height: 100px;
 }
 
 .login_password{
-    width: 420px;
-    height: 140px;
+    width: 350px;
+    height: 100px;
     margin-top: 30px;
 }
 
 .login_idbox input ,
 .login_passwordbox input{
-    width: 420px;
-    height: 70px;
+    width: 350px;
+    height: 50px;
     padding: 10px;
-    margin: 10px 0;
     border-radius: 10px;
     background-color: #ffffff;
     border: 1px solid #ffffff;
-    font-size: 25px;
+    font-size: 20px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .login_idbox input:hover ,
 .login_passwordbox input:hover{
-    border: 3px solid #002445;
+    border: 2px solid #002445;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .login_button button {
-    width: 420px;
-    height: 80px;
-    margin-top: 250px;
+    width: 350px;
+    height: 50px;
+    margin-top: 170px;
     background-color: #f3f6f9;
     color: #002455;
     border: 1px solid #f3f6f9;
     border-radius: 10px;
     cursor: pointer;
     font-weight: 400;
-    font-size: 25px;
+    font-size: 20px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
