--- a/src/pages/ManagePage/PatientInfoChangeForm.css
+++ b/src/pages/ManagePage/PatientInfoChangeForm.css
@@ -52,7 +52,7 @@
 .change_patient_profile{
     width: 320px;
     height: 320px;
-    background-image: url("/src/image/default_profile.png");
+    background-image: url("/src/image/free-icon-edit-user-11864116.png");
     background-size: 320px 320px;
     float: left;
 }
@@ -145,7 +145,7 @@
     margin-top: 110px;
 }
 
-.change_patient_button button:hover{
+.change_patient_total_button button:hover{
     font-weight: 600;
     cursor: pointer;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
