--- a/src/pages/AuthPage/SignIn.css
+++ b/src/pages/AuthPage/SignIn.css
@@ -4,27 +4,56 @@
     box-sizing: border-box;
 }
 
-.signup_page{
-    height: 1080px;
-    width: 1920px;
+.signup_wrap{
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(to right,#002455 50%, #ffffff 50%);
+}
+
+.signup_page{
+    height: 100vh;
+    width: 1920px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.signup_wrap_box{
+    width: 50%;
+    height: 1080px;
+    background-color: #ffffff;
+    border-radius: 100px 0 0 100px;
 }
 
 .signup_box{
-    width: 400px;
-    height: 670px;
-    margin: 190px 360px;
+    width: 500px;
+    height: 800px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    margin: 140px 230px;
+    border-radius: 10px;
+}
+
+.signup_total_box{
+    width: 350px;
+    height: 650px;
+    padding-top: 80px;
+    padding-left: 75px;
 }
 
 .signup_title{
-    width: 400px;
-    line-height: 80px;
+    width: 350px;
+    height: 50px;
     font-size: 40px;
-    margin-bottom: 20px;
     text-align: left;
     color: #002455;
     font-weight: 600;
+}
+
+.signup_input_box{
+    width: 350px;
+    height: 470px;
+    margin-top: 30px;
 }
 
 .signup_id input,
@@ -37,7 +66,7 @@
 .signup_phone_number input,
 .signup_age input{
     height: 50px;
-    width: 400px;
+    width: 350px;
     padding-left: 5px;
     margin-bottom: 10px;
     border-radius: 10px;
@@ -61,7 +90,7 @@
 
 .signup_button button {
     height: 50px;
-    width: 400px;
+    width: 350px;
     font-size: 20px;
     font-weight: 400;
     border-radius: 10px;
@@ -75,14 +104,17 @@
 .signup_button button:hover{
     font-weight: 600;
     cursor: pointer;
+    background-color: #003a6c;
+    color: #ffffff;
+    border: 1px solid #003a6c;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .signup_hello_box{
-    width: 800px;
+    width: 50%;
     height: 1080px;
     background-color: #002455;
-    border-radius: 100px;
+    border-radius: 0 100px 100px 0;
 }
 
 .signup_hello_text{
